Fix vertical alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1161,6 +1161,7 @@ button {
 
 .project__visuel .visuel__letter {
   left: 50%;
+  top: 50%;
 }
 
 .project__description {
